# BonjourServiceAdvertiser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: dns_sd.h
installer/: LICENSE.rtf  advertiser.ini.default  installer.nsi  installer.wxs  version.rc.in
src/: bonjour_publisher.cpp  bonjour_publisher.h  config.cpp  config.h  detector_manager.cpp  detector_manager.h  logger.cpp  logger.h  main.cpp  port_checker.cpp  port_checker.h  service_worker.cpp  service_worker.h
src/detectors/: all_detectors.cpp  detector.h
